--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <span style="--i:6">&nbsp;</span>
                     <span style="--i:8">R </span>
                     <span style="--i:9">A</span>
-                    <span style="--i:11">i</span>
+                    <span style="--i:11">I</span>
 
 
 
@@ -110,7 +110,7 @@
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
-              <h2>about me</h2>
+              <h2>About Me</h2>
             </div>
           </div>
           <div class="row">
@@ -132,16 +132,16 @@
                       <p>Age : <span>20</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p class="emailSize">Email : <span>contacthere.shubham@gmail.com</span></p>
+                      <p class="about">Email : <span class="about-email">contacthere.shubham@gmail.com</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Degree : <span>IT</span></p>
+                      <p>Degree : <span>Bsc IT</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>Contact : <span>+91 8928213249</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Website : <span>www.domain.com</span></p>
+                      <p>Linkdn : <span><a href="https://www.linkedin.com/in/shubhamraii" style="text-decoration: none;">Connect with me</a></span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>City : <span>Mumbai</span></p>
