--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/skins/color-1.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-  <!-- ======style switcher========= -->
+  <!-- ======style switchers========= -->
   <link rel="stylesheet" href="./css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
   <link rel="stylesheet" href="./css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
   <link rel="stylesheet" href="./css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
